--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,14 +17,21 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
+
       - name: Set up timestamp
         run: echo "TIMESTAMP=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
 
       - name: Build and push with timestamp
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:${{ env.TIMESTAMP }} --build-arg DATABASE_URI="${{ secrets.DATABASE_URL }}" .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:latest \
+                       -t ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:${{ env.TIMESTAMP }} \
+                       --build-arg DATABASE_URI="${{ secrets.DATABASE_URL }}" .
           docker push --all-tags ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -33,13 +40,25 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
+            set -e  # Exit on first error
+            
+            echo "🔹 Transferring .env file..."
             echo "${{ secrets.ENV_FILE }}" | sudo tee /home/ubuntu/.env > /dev/null
             sudo mv /home/ubuntu/.env /app/.env
             sudo chmod 600 /app/.env
+
+            echo "🔹 Pulling latest Docker image..."
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:latest
-            sudo docker stop $(sudo docker container ls -q --filter "name=E-Learning") || true
+            
+            echo "🔹 Stopping any running container..."
+            sudo docker stop E-Learning || true
+            
+            echo "🔹 Removing old containers and images..."
             sudo docker container prune --force
             sudo docker image prune --force
-            sudo docker run -d -p 3001:3000 --name E-Learning ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:latest
-            sudo docker logs $(sudo docker container ls -q --filter "name=E-Learning") || true
-            exit
+            
+            echo "🔹 Starting new container..."
+            sudo docker run -d -p 3001:3000 --env-file /app/.env --name E-Learning ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:latest
+            
+            echo "🔹 Checking container logs..."
+            sudo docker logs -n 50 --tail 50 E-Learning
