--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@
       sudo mv /home/ubuntu/.env /app/.env
       sudo chmod 600 /app/.env
 
-      sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:latest
+      sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/E-Learning:latest
       sudo docker stop $(sudo docker container ls -q --filter "name=E-Learning") || true
       sudo docker container prune --force
       sudo docker image prune --force
