--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,20 +1,48 @@
-- name: Deploy to EC2
-  uses: appleboy/ssh-action@v1.0.3
-  with:
-    host: ${{ secrets.SSH_HOST }}
-    username: ${{ secrets.USERNAME }}
-    key: ${{ secrets.SSH_PRIVATE_KEY }}
-    port: ${{ secrets.SSH_PORT }}
-    script: |
-      echo "${{ secrets.ENV_FILE }}" | sudo tee /home/ubuntu/.env > /dev/null
-      sudo mv /home/ubuntu/.env /app/.env
-      sudo chmod 600 /app/.env
+name: Deploy to EC2
 
-      sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/E-Learning:latest
-      sudo docker stop $(sudo docker container ls -q --filter "name=E-Learning") || true
-      sudo docker container prune --force
-      sudo docker image prune --force
-      sudo docker run -d -p 5002:5002 --env-file /app/.env --name E-Learning ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:latest
-      sudo docker logs $(sudo docker container ls -q --filter "name=E-Learning") || true
-      exit
+on:
+  push:
+    branches:
+      - main
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:latest --build-arg DATABASE_URL="${{ secrets.DATABASE_URL }}" .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            echo "${{ secrets.ENV_FILE }}" | sudo tee /home/ubuntu/.env > /dev/null
+            sudo mv /home/ubuntu/.env /app/.env
+            sudo chmod 600 /app/.env
+
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:latest
+            sudo docker stop $(sudo docker container ls -q --filter "name=E-Learning") || true
+            sudo docker container prune --force
+            sudo docker image prune --force
+            sudo docker run -d -p 3001:3000 --env-file /app/.env --name E-Learning ${{ secrets.DOCKERHUB_USERNAME }}/e-learning-backend:latest
+            sudo docker logs $(sudo docker container ls -q --filter "name=E-Learning") || true
+            exit
