--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,7 @@ NODE_ENV=development
 INTERNAL_API_KEY="your_internal_api_key"
 
 # Database
-DATABASE_URL="postgresql://postgres:postgres@postgres:5432/payment_db"
-
+DATABASE_URL="postgresql://username:password@localhost:5432/payment_service_db"
 
 # Stripe
 STRIPE_SECRET_KEY="sk_test_your_stripe_key"
