--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,17 +38,21 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            # Create app directory
+            #!/bin/bash
+            set -e  # Exit immediately if any command fails
+            
+            # 1. Create app directory
             sudo mkdir -p /app
+            cd /app
             
-            # Create .env file with proper permissions
-            echo "${{ secrets.ENV_FILE }}" | sudo tee /app/.env > /dev/null
-            sudo chmod 600 /app/.env
+            # 2. Create .env file
+            echo "${{ secrets.ENV_FILE }}" | sudo tee .env > /dev/null
+            sudo chmod 600 .env
             
-            # Create docker-compose.yml with literal content
-            cat << 'EOF' | sudo tee /app/docker-compose.yml > /dev/null
+            # 3. Create docker-compose.yml
+            cat << 'EOF' | sudo tee docker-compose.yml > /dev/null
             version: '3.8'
-
+            
             services:
               backend:
                 image: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
@@ -56,53 +60,65 @@ jobs:
                 ports:
                   - "5002:5002"
                 env_file:
-                  - /app/.env
+                  - .env
+                volumes:
+                  - ./logs:/app/logs
+                healthcheck:
+                  test: ["CMD", "node", "-e", "require('@prisma/client').PrismaClient && console.log('OK')"]
+                  interval: 10s
+                  timeout: 5s
+                  retries: 10
+                restart: unless-stopped
                 depends_on:
                   postgres:
                     condition: service_healthy
-                healthcheck:
-                  test: ["CMD", "node", "healthcheck.js"]
-                  interval: 10s
-                  timeout: 5s
-                  retries: 5
-                restart: unless-stopped
-
+            
               postgres:
                 image: postgres:14-alpine
-                container_name: ${DB_NAME:-payment_db}-postgres
-                ports:
-                  - "5432:5432"
-                environment:
-                  POSTGRES_USER: ${DB_USER:-postgres}
-                  POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
-                  POSTGRES_DB: ${DB_NAME:-payment_db}
+                container_name: payment_db-postgres
+                env_file:
+                  - .env
                 volumes:
                   - postgres-data:/var/lib/postgresql/data
                 healthcheck:
-                  test: ["CMD-SHELL", "pg_isready -U $${DB_USER:-postgres} -d $${DB_NAME:-payment_db}"]
+                  test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
                   interval: 5s
                   timeout: 5s
                   retries: 10
                 restart: unless-stopped
-
+            
             volumes:
               postgres-data:
             EOF
             
-            # Stop and clean up old containers
-            sudo docker-compose -f /app/docker-compose.yml down || true
+            # 4. Stop and clean existing containers
+            sudo docker-compose down -v --remove-orphans || true
             
-            # Pull the latest image
+            # 5. Remove dangling images
+            sudo docker image prune -af
+            
+            # 6. Pull the latest image
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
             
-            # Start services
-            cd /app && sudo docker-compose up -d
+            # 7. Start services with log tailing
+            sudo docker-compose up -d
             
-            # Verify deployment
-            sleep 15  # Wait for services to initialize
-            echo "=== Running containers ==="
+            # 8. Wait for services to initialize
+            sleep 15
+            
+            # 9. Verify services
+            echo "=== Running Containers ==="
             sudo docker ps -a
-            echo "=== Backend logs ==="
+            
+            echo "=== Backend Logs ==="
             sudo docker logs ${{ env.DOCKER_IMAGE_NAME }} --tail 50 || true
-            echo "=== Postgres logs ==="
-            sudo docker logs ${DB_NAME:-payment_db}-postgres --tail 20 || true
+            
+            echo "=== Database Connection Test ==="
+            sudo docker exec ${{ env.DOCKER_IMAGE_NAME }} node -e "require('@prisma/client').PrismaClient && console.log('Prisma client loaded successfully')" || true
+            
+            echo "=== Health Check ==="
+            curl -s http://localhost:5002/health || echo "Health check failed"
+            
+            # 10. Final status
+            echo "Deployment completed. Verify services are running:"
+            sudo docker-compose ps
