--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "jest --watch --runInBand",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "docker:debug": "docker run -it --rm -e NODE_DEBUG=module your-image npm run start:debug"
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
@@ -43,4 +44,5 @@
       "/node_modules/"
     ]
   }
+ 
 }
