change in enviroment anddocker compose

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,14 @@
 # Server
 PORT=5002
 NODE_ENV=development
-INTERNAL_API_KEY="your_internal_api_key"
+INTERNAL_API_KEY=your_internal_api_key
 
 # Database
-DATABASE_URL="postgresql://username:password@postgres:5432/payment_service_db"
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/payment_db
 
 # Stripe
-STRIPE_SECRET_KEY="sk_test_your_stripe_key"
-STRIPE_WEBHOOK_SECRET="whsec_your_webhook_secret"
-
+STRIPE_SECRET_KEY=sk_test_your_stripe_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
 # Platform Settings
 PLATFORM_COMMISSION_PERCENTAGE=20
