--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=Rot@2112002
       - POSTGRES_DB=payment_db
     volumes:
       - postgres-data:/var/lib/postgresql/data
