--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "payment-service",
   "version": "1.0.0",
   "description": "Payment processing service for the e-learning platform",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "jest --runInBand --detectOpenHandles",
-    "debug": "node --inspect-brk src/server.js",
+    "debug": "node --inspect-brk src/index.js",
     "test:watch": "jest --watch --runInBand",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
