--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
     restart: unless-stopped         # Added restart policy for reliability
 
   db:
-    image: postgres:13
+    image: postgres:14-alpine
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: Rot@2112002
