--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,7 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/phantasmagoria-backend:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/phantasmagoria-backend:${{ env.TIMESTAMP }} --build-arg DB_URL="${{ secrets.DATABASE_URI}}" .
           docker push --all-tags ${{ secrets.DOCKERHUB_USERNAME }}/phantasmagoria-backend
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -34,9 +35,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/phantasmagoria-backend:latest
-            sudo docker stop $(sudo docker container ls -q --filter "name=phantasmagoria") || true
-            sudo docker container prune --force
-            sudo docker image prune --force
-            sudo docker run -d -p 5001:5000 --name phantasmagoria ${{ secrets.DOCKERHUB_USERNAME }}/phantasmagoria-backend:latest
+            sudo docker-compose down --volumes
+            sudo docker-compose up --build -d
             sudo docker logs $(sudo docker container ls -q --filter "name=phantasmagoria") || true
             exit
