--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,24 +8,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out the repository
+      - name: Checkout Code
         uses: actions/checkout@v3
-        
-      - name: Login to Docker Hub
+
+      - name: Docker Hub Login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
-      - name: Set up timestamp
+
+      - name: Timestamp
         run: echo "TIMESTAMP=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
 
-      - name: Build and push with timestamp
+      - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:${{ env.TIMESTAMP }} --build-arg DB_URL="${{ secrets.DATABASE_URI}}" .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:${{ env.TIMESTAMP }} .
           docker push --all-tags ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend
-      - name: Deploy to EC2
+
+      - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -33,10 +35,44 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:latest
-            sudo docker stop $(sudo docker container ls -q --filter "name=elearning_backend") || true
-            sudo docker container prune --force
-            sudo docker image prune --force
-            sudo docker run -d -p 5001:5000 --name elearning_backend ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:latest
-            sudo docker logs $(sudo docker container ls -q --filter "name=elearning_backend") || true
-            exit
+            cd name: Deploy to EC2
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Docker Hub Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Timestamp
+        run: echo "TIMESTAMP=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
+
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend:${{ env.TIMESTAMP }} .
+          docker push --all-tags ${{ secrets.DOCKERHUB_USERNAME }}/elearning_backend
+
+      - name: Deploy to EC2 via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            cd /home/ubuntu/elearning-backend/E-learning-payment
+            ./deploy.sh
+
+          
