--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -72,7 +72,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd /home/ubuntu/elearning-backend/E-learning-payment
-            ./deploy.sh
+              cd /home/ubuntu/elearning-backend/E-learning-payment
+              chmod +x deploy.sh
+              ./deploy.sh
 
           
