--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "payment-service": "file:",
     "pdfkit": "^0.13.0",
     "stripe": "^12.14.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.0",
     "winston": "^3.10.0"
   },
