--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,22 @@
-# Server
-PORT=5002
-NODE_ENV=development
-INTERNAL_API_KEY=your_internal_api_key
+# Database Config
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/payment_service
 
-# Database
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/payment_db
+# Redis Config
+REDIS_URL=redis://localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_TLS_ENABLED=false
+CACHE_TTL=3600
 
-# Stripe
-STRIPE_SECRET_KEY=sk_test_your_stripe_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
-
-# Platform Settings
+# Stripe Config
+STRIPE_SECRET=sk_test_your_test_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 PLATFORM_COMMISSION_PERCENTAGE=20
 
-# External Services
-USER_SERVICE_URL=http://localhost:5000
-COURSE_SERVICE_URL=http://localhost:5001
+# Server Config
+PORT=5002
+NODE_ENV=development
 
-# Logging
-LOG_LEVEL=info
+# Security
+INTERNAL_API_KEY=your_internal_api_key_here
