--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "payment-service": "file:",
     "pdfkit": "^0.13.0",
+    "redis": "^4.7.0",
     "stripe": "^12.14.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
