--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,15 @@ services:
       timeout: 5s
       retries: 5
     restart: unless-stopped
-
+  redis: 
+    container_name: e-learning_backend-payment-redis
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    networks:
+      - payment-network
+    restart: unless-stopped
+    
 volumes:
   postgres_data:
 
