added the progress web-hook

--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@ CACHE_TTL=3600
 
 
 USER_SERVICE_URL="http://localhost:5003/api/v1/ums"
+PROGRESS_SERVICE_URL="http://localhost:5004/api/v1/progress"
 COURSE_SERVICE_URL="http://localhost5007/api/v1/cms"
-
 
 JWT_SECRET="your_jwt_secret" 
 
