--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       db:
         condition: service_healthy
     networks:
-      - payment-network
+      - e-learning-network
     restart: unless-stopped
 
   db:
@@ -28,7 +28,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - payment-network
+      - e-learning-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -41,12 +41,12 @@ services:
     ports:
       - "6379:6379"
     networks:
-      - payment-network
+      - e-learning-network
     restart: unless-stopped
     
 volumes:
   postgres_data:
 
 networks:
-  payment-network:
+  e-learning-network:
     driver: bridge
