--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,6 +36,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd /home/ubuntu/elearning-backend/E-learning-payment
-            chmod +x deploy.sh
-            ./deploy.sh
+            cd /home/ubuntu/elearning-backend/E-payment
+            chmod +x deploy4.sh
+            ./deploy4.sh
