trying fix redis

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ CACHE_TTL=3600
 
 USER_SERVICE_URL="http://3.70.227.2:5003/api/v1/ums"
 PROGRESS_SERVICE_URL="http://3.70.227.2:5004/api/v1/progress"
-COURSE_SERVICE_URL="http://3.70.227.2:5008/api/v1/cms"
+COURSE_SERVICE_URL="http://cms-api-1/api/v1/cms"
 
 JWT_SECRET="your_jwt_secret" 
 
