switch to production

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 PORT=5002
-NODE_ENV=development
+NODE_ENV=production
 INTERNAL_API_KEY=ETiPhW0E60m2jl5nyFK0iA
 
 ALLOWED_ORIGINS="http://localhost:3000, http://127.0.0.1:5500, http://localhost:3002"
